--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": "^2.5.14",
-    "nodepie": "0.5.0",
-    "hubot-slack": "^2.1.0"
+    "hubot": "^2.11.4",
+    "hubot-scripts": "^2.5.16",
+    "nodepie": "^0.6.6",
+    "hubot-slack": "^3.3.0"
   },
   "engines": {
-    "node": ">= 0.8.x",
-    "npm": ">= 1.1.x"
+    "node": "^0.10.0"
   }
 }
