--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hosted-hubot",
   "version": "2.7.5",
-
   "author": "GitHub Inc.",
   "keywords": [
     "github",
@@ -23,7 +22,8 @@
   "dependencies": {
     "hubot": "^2.11.4",
     "hubot-scripts": "^2.5.16",
-    "hubot-slack": "^3.3.0"
+    "hubot-slack": "^3.3.0",
+    "xml2js": "^0.4.8"
   },
   "engines": {
     "node": "^0.10.0"
