--- a/package.json
+++ b/package.json
@@ -1,37 +1,25 @@
 {
-  "name": "hosted-hubot",
-  "version": "2.8.0",
-  "author": "GitHub Inc.",
-  "keywords": [
-    "github",
-    "hubot",
-    "campfire",
-    "bot"
-  ],
-  "description": "A simple helpful robot for your Company",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/github/hubot/raw/master/LICENSE"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/github/hubot.git"
-  },
+  "name": "wendell",
+  "version": "0.0.0",
+  "private": true,
+  "author": "Chris Moore <chrism@gaslight.co>",
+  "description": "A simple helpful robot for Gaslight",
   "dependencies": {
-    "hubot": "^2.17.0",
-    "hubot-slack": "~3.4.2",
-    "xml2js": "^0.4.8",
-    "hubot-dropcam": "cdmwebs/hubot-dropcam",
-    "hubot-redis-brain": "0.0.3",
+    "hubot-maps": "0.0.2",
+    "hubot-help": "~0.1.2",
+    "hubot-pugme": "~0.1.0",
+    "hubot-diagnostics": "0.0.1",
+    "hubot-google-translate": "~0.2.0",
+    "hubot-rules": "~0.1.1",
     "hubot-shipit": "~0.2.0",
-    "hubot-google-images": "~0.2.6"
+    "hubot-heroku-keepalive": "~1.0.1",
+    "hubot-google-images": "git://github.com/hubot-scripts/hubot-google-images",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-scripts": "~2.16.2",
+    "hubot": "~2.17.0",
+    "hubot-slack": "~3.4.2"
   },
   "engines": {
-    "node": "^0.10.0"
-  },
-  "devDependencies": {
-    "dotenv": "~1.1.0"
+    "node": "0.10.x"
   }
 }
