--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "hubot-google-images": "git://github.com/hubot-scripts/hubot-google-images",
     "hubot-redis-brain": "0.0.3",
     "hubot": "~2.17.0",
-    "hubot-slack": "~3.4.2"
+    "hubot-slack": "~3.4.2",
+    "xml2js": "~0.4.15",
+    "hubot-dropcam": "git://github.com/cdmwebs/hubot-dropcam"
   },
   "engines": {
     "node": "0.10.x"
