--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hubot": "~2.17.0",
     "hubot-slack": "~3.4.2",
     "xml2js": "~0.4.15",
-    "hubot-dropcam": "git://github.com/cdmwebs/hubot-dropcam"
+    "hubot-dropcam": "git://github.com/cdmwebs/hubot-dropcam",
+    "hubot-darksky": "~1.0.2"
   },
   "engines": {
     "node": "0.10.x"
