t Add discord to wendell

--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "author": "Chris Moore <chrism@gaslight.co>",
   "description": "A simple helpful robot for Gaslight",
   "dependencies": {
-    "hubot-maps": "0.0.2",
-    "hubot-help": "~0.1.2",
-    "hubot-pugme": "~0.1.0",
-    "hubot-diagnostics": "0.0.1",
-    "hubot-google-translate": "~0.2.0",
-    "hubot-rules": "~0.1.1",
-    "hubot-shipit": "~0.2.0",
-    "hubot-heroku-keepalive": "~1.0.1",
-    "hubot-google-images": "git://github.com/hubot-scripts/hubot-google-images",
-    "hubot-redis-brain": "0.0.3",
     "hubot": "~2.17.0",
-    "hubot-slack": "~3.4.2",
-    "xml2js": "~0.4.15",
     "hubot-darksky": "~1.0.2",
+    "hubot-diagnostics": "0.0.1",
+    "hubot-discord": "git://github.com/tmecklem/hubot-discord",
+    "hubot-google-images": "git://github.com/hubot-scripts/hubot-google-images",
+    "hubot-google-translate": "~0.2.0",
+    "hubot-help": "~0.1.2",
+    "hubot-heroku-keepalive": "~1.0.1",
+    "hubot-maps": "0.0.2",
+    "hubot-pugme": "~0.1.0",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-rules": "~0.1.1",
     "hubot-scripts": "~2.16.2",
+    "hubot-shipit": "~0.2.0",
+    "hubot-slack": "~3.4.2",
+    "hubot-tell": "~1.2.4",
     "underscore": "~1.8.3",
-    "hubot-tell": "~1.2.4"
+    "xml2js": "~0.4.15"
   },
   "engines": {
     "node": "0.10.x"
