--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-redis-brain": "^1.0.0",
     "hubot-rules": "^1.0.0",
     "hubot-scripts": "^2.17.2",
-    "hubot-shipit": "^0.2.1"
+    "hubot-shipit": "^0.2.1",
+    "xml2js": "^0.4.19"
   },
   "engines": {
     "node": "0.10.x"
