--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hubot-redis-brain": "^1.0.0",
     "hubot-rules": "^1.0.0",
     "hubot-scripts": "^2.17.2",
+    "request": "^2.88.0",
     "underscore": "^1.9.1",
     "xml2js": "^0.4.19"
   },
